objects/nPortal__Tile__c.object
<CustomObject>
    <description>--DEPRECATED-- This object will hold information to be displayed in the online application</description>
    <fields>
        <fullName>nPortal__Body__c</fullName>
        <description>This should contain the formatted body of the tile. It is completely customizable.</description>
        <label>Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>nPortal__Header__c</fullName>
        <description>The title field for the Tile</description>
        <label>Header</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Icon_Path__c</fullName>
        <description>This field should contain a text which corresponds to an sldc icon</description>
        <label>Icon Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>-D Tile</label>
    <nameField>
        <label>Tile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>-D Tiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>